--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</div>
 	<br><br>
 	<div>
-		<img src="/img/image.png" alt="Какая-то картинка!">
+		<img src="../Lesson_4/img/image.png" alt="Какая-то картинка!">
 	</div>
 	<br>
 	<div>
